# doorbell

MCAD/: Base.ipt  Battery Cover.ipt  Inner Superstructure.ipt  Main.iam
firmware/: .gitignore  CMakeLists.txt  build.sh  cspell.json  flake.nix  flash-bootloader.sh  flash.sh  sdkconfig  sdkconfig.defaults
firmware/main/: CMakeLists.txt  main.c  main.h
firmware/main/doorbell/: doorbell.c  doorbell.h
firmware/main/status/: pattern_driver_thread.c  pattern_driver_thread.h  status.c  status.h  status_sync_thread.c  status_sync_thread.h
firmware/main/wifi/: socket.c  socket.h  wifi.c  wifi.h
